Fix nginx config

--- a/dockerfiles/nginx/nginx.conf
+++ b/dockerfiles/nginx/nginx.conf
@@ -34,7 +34,7 @@ http {
     real_ip_header X-Forwarded-For;
 
     server {
-        listen 80 default_server;
+        listen 80 http2 default_server;
         server_name pleroma.io;
 
         gzip_vary on;
@@ -44,17 +44,9 @@ http {
         gzip_http_version 1.1;
         gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript application/activity+json application/atom+xml;
 
+
         # the nginx default is 1m, not enough for large media uploads
         client_max_body_size 16m;
-
-
-        location /proxy {
-            proxy_cache pleroma_media_cache;
-            proxy_cache_lock on;
-            proxy_ignore_client_abort on;
-            proxy_cache_valid 200 1d;
-            proxy_pass http://phoenix:4000;
-        }
 
 
         location / {
@@ -63,9 +55,23 @@ http {
             proxy_set_header Connection "upgrade";
             proxy_set_header Host $http_host;
 
-            client_max_body_size 16m;
+            proxy_pass http://localhost:4000;
 
-            proxy_pass http://phoenix:4000;
+            client_max_body_size 16m;
+        }
+
+        location ~ ^/(media|proxy) {
+            proxy_cache pleroma_media_cache;
+            slice              1m;
+            proxy_cache_key    $host$uri$is_args$args$slice_range;
+            proxy_set_header   Range $slice_range;
+            proxy_http_version 1.1;
+            proxy_cache_valid  200 206 301 304 1h;
+            proxy_cache_lock on;
+            proxy_ignore_client_abort on;
+            proxy_buffering off;
+            chunked_transfer_encoding on;
+            proxy_pass http://localhost:4000;
         }
     }
 }
