--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - "4000:4000"
     links:
       - db:db
+      - redis:redis
 
   db:
     image: postgres:10-alpine
@@ -21,6 +22,9 @@ services:
     volumes:
       - storage:/var/lib/postgres/data
       - ./config:/var/opt/pleroma/config
+
+  redis:
+    image: redis:5.0.0-alpine
 
 volumes:
   storage:
